; ModuleID = '/home/carl/AnghaBench/linux/drivers/pinctrl/mediatek/extr_pinctrl-mtk-common-v2.c_mtk_pinconf_bias_set.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pinctrl/mediatek/extr_pinctrl-mtk-common-v2.c_mtk_pinconf_bias_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtk_pinctrl = type { i32 }
%struct.mtk_pin_desc = type { i32 }

@PINCTRL_PIN_REG_PU = common dso_local global i32 0, align 4
@PINCTRL_PIN_REG_PD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mtk_pinconf_bias_set(%struct.mtk_pinctrl* %0, %struct.mtk_pin_desc* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.mtk_pinctrl*, align 8
  %6 = alloca %struct.mtk_pin_desc*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.mtk_pinctrl* %0, %struct.mtk_pinctrl** %5, align 8
  store %struct.mtk_pin_desc* %1, %struct.mtk_pin_desc** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  %11 = icmp ne i32 %10, 0
  %12 = zext i1 %11 to i64
  %13 = select i1 %11, i32 1, i32 2
  store i32 %13, i32* %9, align 4
  %14 = load %struct.mtk_pinctrl*, %struct.mtk_pinctrl** %5, align 8
  %15 = load %struct.mtk_pin_desc*, %struct.mtk_pin_desc** %6, align 8
  %16 = load i32, i32* @PINCTRL_PIN_REG_PU, align 4
  %17 = load i32, i32* %9, align 4
  %18 = and i32 %17, 1
  %19 = call i32 @mtk_hw_set_value(%struct.mtk_pinctrl* %14, %struct.mtk_pin_desc* %15, i32 %16, i32 %18)
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* %8, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %3
  %23 = load i32, i32* %8, align 4
  store i32 %23, i32* %4, align 4
  br label %40

24:                                               ; preds = %3
  %25 = load %struct.mtk_pinctrl*, %struct.mtk_pinctrl** %5, align 8
  %26 = load %struct.mtk_pin_desc*, %struct.mtk_pin_desc** %6, align 8
  %27 = load i32, i32* @PINCTRL_PIN_REG_PD, align 4
  %28 = load i32, i32* %9, align 4
  %29 = and i32 %28, 2
  %30 = icmp ne i32 %29, 0
  %31 = xor i1 %30, true
  %32 = xor i1 %31, true
  %33 = zext i1 %32 to i32
  %34 = call i32 @mtk_hw_set_value(%struct.mtk_pinctrl* %25, %struct.mtk_pin_desc* %26, i32 %27, i32 %33)
  store i32 %34, i32* %8, align 4
  %35 = load i32, i32* %8, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %39

37:                                               ; preds = %24
  %38 = load i32, i32* %8, align 4
  store i32 %38, i32* %4, align 4
  br label %40

39:                                               ; preds = %24
  store i32 0, i32* %4, align 4
  br label %40

40:                                               ; preds = %39, %37, %22
  %41 = load i32, i32* %4, align 4
  ret i32 %41
}

declare dso_local i32 @mtk_hw_set_value(%struct.mtk_pinctrl*, %struct.mtk_pin_desc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
